--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -17,6 +17,7 @@
     --color-3: #df5d14;
     --gradient: linear-gradient(91.92deg, #f7a92f 0%, #f16b1f 100%);
     --gradient-blue: linear-gradient(94.55deg, #2072BD 0.13%, #0D3B65 100.13%);
+    --gradient-green: linear-gradient(92.06deg, #69C82F 0%, #26910B 100%);
     --color-red: #981503;
     --color-green: #459803;
     --color-blue: #0fa0b4;
@@ -576,6 +577,28 @@ svg.gradientForce linearGradient stop:last-child {
     transition: 0.2s opacity;
     overflow: hidden;
     white-space: nowrap;
+}
+.btn.add {
+    background: var(--gradient-green) !important;
+    color: white !important;
+}
+
+.btn.blue-gradient {
+    background: var(--gradient-blue);
+    color: white !important;
+}
+.btn.blue-gradient:not(.icon) svg {
+    color: #fff;
+    fill: #fff;
+}
+.btn.rounded-tiny {
+    border-radius: 4px !important;
+}
+.btn.tiny {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    padding: 12px 16px;
 }
 
 .btn:not(.icon) svg {
